# 15-puzzle

./: .gitattributes  CMakeLists.txt  a5.cpp  a5.h  bit_blocks.h  computeDpd.cpp  computeDpd.h  dpd.cpp  dpd.h  index.cpp  index.h  puzzle.cpp  puzzle.h  result.csv  result.xlsx  solver.cpp  solver.h
